alteração titulo do html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Repositorio branch desenv </h1>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8"/>
+<title>Treinando git</title>
+</head>
+<body>
+<!-- Conteúdo -->
+</body>
+</html>
