titulo alterado para treinando git - branch 1

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<title>Treinando git</title>
+<title>Treinando git - branch 1</title>
 </head>
 <body>
 <!-- Conteúdo -->
