--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<title>Treinando git</title>
+<title>git feature</title>
 </head>
 <body>
 <!-- Conteúdo -->
