--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<title>alteração do titulo para sprint1 da feture/pte_matmed</title>
+<title>alteração do titulo para sprint1 da feture-pte_matmed</title>
 </head>
 <body>
 <!-- Conteúdo -->
