--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<title>meu ajuste as 14:40h/title>
+<title>finalizando titulo/title>
 </head>
 <body>
 <!-- Conteúdo -->
